--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "ft_ls.h": "c"
+        "ft_ls.h": "c",
+        "string.h": "c",
+        "pwd.h": "c"
     }
 }
